# LookAwayTimer

./: CMakeLists.txt  README.md  main.cpp
src/: Sound.cpp  Sound.h  VecXT.h  glwidget.cpp  glwidget.h  helper.cpp  helper.h  window.cpp  window.h
